@@ -1321,7 +1321,7 @@ your own script.
 .RS 4
 .P
 .EX
-MAP=@FONTDIR@/devps/generate/textmap
+MAP=@FONTDIR@/devps/generate/text.map
 TTF=/usr/share/fonts/truetype/roboto/slab/RobotoSlab\-Regular.ttf
 BASE=$(basename \[dq]$TTF\[dq])
 INT=${BASE%.ttf}
@@ -1451,7 +1451,7 @@ For instance,
 .RS \" two RS calls to get inboard of IP indentation
 .EX
 $ \c
-.B afmtodit BrushScriptX\-Italic.afm textmap BSI
+.B afmtodit BrushScriptX\-Italic.afm text.map BSI
 .EE
 .RE
 .
@@ -1735,7 +1735,7 @@ device refers to it.
 .
 .
 .TP
-.I @FONTDIR@/\:\%devps/\:\%generate/\:textmap
+.I @FONTDIR@/\:\%devps/\:\%generate/\:text.map
 maps names in the Adobe Glyph List to
 .I groff
 special character identifiers.
